--- a/views/new.ejs
+++ b/views/new.ejs
@@ -93,6 +93,7 @@ body{
 </head>
 
 <body>
+	<% include partials/header %>
 
 <div class="form-style">
   <h2>Submit a new Course</h2>
@@ -115,5 +116,6 @@ body{
   <p>Have an account? <a href="/courses">Login</a></p>
 </div>
 
+<% include partials/footer %>
 </body>
 </html>
